# osm_loader

./: .gitignore  LICENSE  README.md  dc_point_picker.py  osm_route_analysis.py  requirements.txt  route_complexity.py  route_planner.py
src/map_fetcher/: CMakeLists.txt  README.md  package.xml  setup.cfg
src/map_fetcher/map_fetcher/: map_fetcher_node.py  osm_visualizer_node.py
src/map_fetcher/resource/: map_fetcher
src/map_fetcher/scripts/: map_fetcher_node  osm_visualizer_node
