<?xml version="1.0"?>
<package format="3">
  <name>map_fetcher</name>
  <version>0.1.0</version>
  <description>Fetches OpenStreetMap extracts based on ROS 2 pose, place, or file input.</description>
  <maintainer email="jonas@example.com">Jonas</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-geopy</exec_depend>
  <exec_depend>python3-requests</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
