[metadata]
name = map_fetcher
version = 0.1.0
description = ROS 2 node that downloads OpenStreetMap data driven by pose, place, or file input.
license = MIT

[options]
packages = find:
install_requires =
    geopy
    requests
    matplotlib
zip_safe = false

[options.entry_points]
console_scripts =
    map_fetcher_node = map_fetcher.map_fetcher_node:main
    osm_visualizer_node = map_fetcher.osm_visualizer_node:main

[options.package_data]
* = *.py

[options.data_files]
share/ament_index/resource_index/packages =
    resource/map_fetcher
share/map_fetcher =
    package.xml
lib/map_fetcher =
    scripts/map_fetcher_node
    scripts/osm_visualizer_node
